<resources>
    <string name="app_name">Hack2020</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="personal">PERSONAL</string>
    <string name="paciente">PACIENTE</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="qr">QR</string>
    <string name="historial">Historial</string>
    <string name="menu">Menu</string>
    <string name="lista_de_espera">Lista de ESpera</string>
    <string name="cartilla_de_vacunaci_n">Cartilla de Vacunación</string>
</resources>