<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Paciente">

    <Button
        android:id="@+id/QR_Boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="136dp"
        android:text="@string/qr"
        app:layout_constraintBottom_toTopOf="@+id/Cartilla_Boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Menu_Titulo" />

    <Button
        android:id="@+id/Historial_Boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="317dp"
        android:layout_marginBottom="137dp"
        android:text="@string/historial"
        app:layout_constraintBottom_toTopOf="@+id/ListaE_Boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/QR_Boton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Cartilla_Boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="182dp"
        android:text="@string/cartilla_de_vacunaci_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QR_Boton" />

    <Button
        android:id="@+id/ListaE_Boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="239dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="181dp"
        android:text="@string/lista_de_espera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Historial_Boton" />

    <TextView
        android:id="@+id/Menu_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="397dp"
        android:text="@string/menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/Cartilla_Boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>